CSS 2.1 failure: fixed-table-layout-013 and fixed-table-layout-015 fail https://bugs.webkit.org/show_bug.cgi?id=78027

Reviewed by Julien Chaffraix.

Source/WebCore:

Both of these test the (slightly implicit) rule that width set on column-groups cannot
affect the width of columns in a fixed layout table: http://www.w3.org/TR/CSS21/tables.html#fixed-table-layout
FF, Opera and IE all pass these two tests.

Tests: css2.1/20110323/fixed-table-layout-013.htm
       css2.1/20110323/fixed-table-layout-015.htm
       fast/table/fixed-table-layout-toggle-colwidth.html

* rendering/FixedTableLayout.cpp:
(WebCore::nextCol): A helper function for finding the next column along.
(WebCore::FixedTableLayout::calcWidthArray): Ignore width specified by column groups.
* rendering/RenderTableCol.h:
(WebCore::RenderTableCol::isTableColGroup): Convenience function for identifying column groups.

LayoutTests:

* css2.1/20110323/fixed-table-layout-013-expected.html: Added.
* css2.1/20110323/fixed-table-layout-013.htm: Added.
* css2.1/20110323/fixed-table-layout-015-expected.html: Added.
* css2.1/20110323/fixed-table-layout-015.htm: Added.
* fast/table/fixed-table-layout-toggle-colwidth-expected.txt: Added.
* fast/table/fixed-table-layout-toggle-colwidth.html: Added.

Canonical link: https://commits.webkit.org/98665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111118 268f45cc-cd09-0410-ab3c-d52691b4dbfc