Source/WebCore/rendering/RenderTableCol.h
@@ -43,7 +43,7 @@ public:
 
     unsigned span() const { return m_span; }
     void setSpan(unsigned span) { m_span = span; }
-
+    bool isTableColGroup() { return firstChild() ? true : false; }
 private:
     virtual RenderObjectChildList* virtualChildren() { return children(); }
     virtual const RenderObjectChildList* virtualChildren() const { return children(); }
